--- a/web/templates/pages/index.html
+++ b/web/templates/pages/index.html
@@ -21,11 +21,11 @@
         <p class="section-header">The Kittens</p>
     </div>
     <div class="content-container">
+        <img class="section-image-large" src="/web/images/kuro/index.jpeg" alt="">
         <p class="section-text">
             View all of our currently available kittens.
         </p>
         <div class="image-button-container">
-            <img class="section-image-small" src="/web/images/kuro/index.jpeg" alt="">
             <a class="section-link" href="/kittens">View Kittens</a>
         </div>
     </div>
@@ -36,7 +36,7 @@
     </div>
     <div class="content-container">
         <div class="image-button-container">
-            <img class="section-image-small" src="/web/images/nabi/main.jpeg" alt="">
+            <img class="section-image-large" src="/web/images/nabi/main.jpeg" alt="">
             <!-- <a class="section-link" href="/bloodline">View Bloodline</a> -->
         </div>
         <p class="section-text">
@@ -50,11 +50,11 @@
         <p class="section-header">The Breeder</p>
     </div>
     <div class="content-container">
+        <img class="section-image-large" src="/web/images/mina.jpeg" alt="">
         <p class="section-text">
             Adia has decades of animal experience and pours everything she has
             into ensuring her animals are nutured and healthy.
         </p>
-        <img class="section-image-large" src="/web/images/mina.jpeg" alt="">
     </div>
 </div>
 <div class="home-section" id="contact-section">
@@ -62,7 +62,7 @@
         <p class="section-header">Contact</p>
     </div>
     <div class="content-container">
-        <img class="section-image-large" src="/web/images/mina.jpeg" alt="">
+        <img class="section-image-large" src="/web/images/cat_calling.png" alt="">
         <p class="section-text">
             Send us any questions you have about anything.
         </p>
