--- a/web/templates/partials/navbar.html
+++ b/web/templates/partials/navbar.html
@@ -62,6 +62,7 @@
     </div>
     <div class="right-nav-links">
         <button class="close-nav-button">X</button>
+        <a class="nav-link right-nav-link" href="/">Home</a>
         <a class="nav-link right-nav-link" href="/kittens">Kittens</a>
         <a class="nav-link right-nav-link" href="/contract">Contract</a>
     </div>
