--- a/web/css/cat-details.css
+++ b/web/css/cat-details.css
@@ -2,9 +2,10 @@
    Base Styles (default)
 ============================ */
 .cat-details-container {
+    background-color: white;
     font-family: Amita;
-    margin-top: 15vh;
-    height: 85vh;
+    margin-top: 10vh;
+    height: 90vh;
     width: 100vw;
     display: flex;
     flex-direction: column;
