--- a/web/templates/pages/index.html
+++ b/web/templates/pages/index.html
@@ -4,14 +4,10 @@
 <div class="home-section" id="hero-section">
     <div id="mission-section">
         <div class="header-container" id="mission-header">
-            <p class="section-header">The Mission</p>
+            <p class="section-header">Born primal. Raised with intention. Treasured for life.</p>
         </div>
         <div class="content-container" id="mission-content">
-            <!-- <img class="section-image-large" src="/web/images/don/main.jpeg" alt=""> -->
             <p class="section-text" id="mission-text">
-                Primal Bloodline is dedicated to ethical breeding, 
-                prioritizing health, genetics, and early socialization 
-                to raise confident, loving companions.
             </p>
         </div>
     </div>
