--- a/web/templates/partials/navbar.html
+++ b/web/templates/partials/navbar.html
@@ -1,7 +1,7 @@
 {{ define "navbar" }}
 <nav class="navbar top" id="{{ .NavbarID }}"> <!-- main-navbar or alternate-navbar -->
     <div class="left-nav-container">
-        <img class="left-icon" src="/web/images/don_don_art.jpg" alt="don-don">
+        <img class="left-icon" src="/web/images/don_don_art_backup.jpg" alt="don-don">
         <a id="left-nav-link" class="left-nav-link" href="/">
             <svg class="site-title"
                 viewBox="0 0 1800.0001 300"
