--- a/web/css/cat-details.css
+++ b/web/css/cat-details.css
@@ -3,7 +3,7 @@
 ============================ */
 .cat-details-container {
     background-color: white;
-    font-family: Amita;
+    font-family: "Cinzel Decorative", serif;;
     margin-top: 10vh;
     height: 90vh;
     width: 100vw;
@@ -14,12 +14,13 @@
 }
 
 .cat-details-image {
-    height: 10rem;
-    width: 10rem;
-    border-radius: 10px;
+    height: 12rem;
+    width: 12rem;
+    border-radius: 8px;
 }
 
 .cat-details-text {
+    font-size: 10px;
     width: 20rem;
     display: flex;
     flex-direction: column;
@@ -29,7 +30,7 @@
 }
 
 .cat-name {
-    font-size: xx-large;
+    font-size: 20px;
     font-weight: bold;
 }
 
@@ -97,6 +98,14 @@
         flex-direction: row;
     }
 
+    .cat-name {
+        font-size: 24px;
+    }
+
+    .cat-price {
+        font-size: 20px;
+    }
+
     .cat-details-image {
         height: 40rem;
         width: 40rem;
@@ -104,6 +113,7 @@
     }
 
     .cat-details-text {
+        font-size: 14px;
         align-items: baseline;
     }
 
