--- a/web/css/index.css
+++ b/web/css/index.css
@@ -22,7 +22,7 @@ a, a:hover, a:focus, a:active {
     height: 90.025vh;
     background-color: rgb(255, 255, 255);
     color: black;
-    font-family: Amita;
+    font-family: "Cinzel Decorative", serif;;
     /* font-family: 'PBLFont'; */
     display: flex;
     flex-direction: column;
@@ -31,9 +31,10 @@ a, a:hover, a:focus, a:active {
 }
 
 #hero-section {
-    background-image: url("/web/images/don_don_bw_glowing_gradient.png");
+    background-image: url("/web/images/don_don_bw_glowing_gradient_mobile.jpeg");
     background-size: cover;
     background-position: center;
+    background-repeat: no-repeat;
     height: 200vh;
 }
 
@@ -56,7 +57,7 @@ a, a:hover, a:focus, a:active {
 }
 
 .section-header {
-    font-size: 24px;
+    font-size: 20px;
 }
 
 .content-container {
@@ -115,12 +116,12 @@ a, a:hover, a:focus, a:active {
     background-color: black;
 }
 
-/* @font-face {
+@font-face {
     font-family: 'PBLFont';
-    src: url('/web/fonts/Primal_Bloodline.ttf') format('truetype');
+    src: url('/web/fonts/Primal_Bloodline_v2.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
-} */
+}
 
 /* =========================
    Smallest phones (≥320px)
@@ -150,24 +151,28 @@ a, a:hover, a:focus, a:active {
    Large desktops (≥1200px)
 ============================ */
 @media (min-width: 1200px) {
-    .section-image-large {
-        height: 25rem;
-        width: 25rem;
+    #hero-section {
+        background-image: url("/web/images/don_don_bw_glowing_gradient.jpeg");
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
     }
 
-    .content-container {
-        /* flex-direction: row;
-        align-items: center; */
-        padding-left: 15vw;
-        padding-right: 15vw;
+    .section-image-large {
+        height: 28rem;
+        width: 28rem;
     }
 
     .section-header {
         font-size: 32px;
+        opacity: 0.9;
     }
 
     .section-text {
+        padding-left: 30vw;
+        padding-right: 30vw;
         font-size: 18px;
+        opacity: 0.7;
     }
 
     .section-image-small {
