--- a/web/css/inquire.css
+++ b/web/css/inquire.css
@@ -3,7 +3,7 @@
 ============================ */
 .contact-main-container {
     background-color: white;
-    font-family: Amita;
+    font-family: "Cinzel Decorative", serif;;
     margin-top: 10vh;
     height: 90vh;
     width: 100vw;
