--- a/web/templates/layout.html
+++ b/web/templates/layout.html
@@ -13,6 +13,8 @@
     <script defer src="/web/js/index.js"></script>
     <script defer src="/web/js/navbar.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Amita&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700;900&display=swap" rel="stylesheet">
 </head>
 <body>
     {{ block "content" . }}
