--- a/web/templates/pages/index.html
+++ b/web/templates/pages/index.html
@@ -14,7 +14,7 @@
 </div>
 <div class="home-section" id="cat-section">
     <div class="header-container">
-        <p class="section-header">The Kittens</p>
+        <p class="section-header">- The Kittens -</p>
     </div>
     <div class="content-container">
         <img class="section-image-large" src="/web/images/kuro/index.jpeg" alt="">
@@ -28,12 +28,11 @@
 </div>
 <div class="home-section" id="bloodline-section">
     <div class="header-container">
-        <p class="section-header">The Bloodline</p>
+        <p class="section-header">- The Bloodline -</p>
     </div>
     <div class="content-container">
         <div class="image-button-container">
             <img class="section-image-large" src="/web/images/nabi/main.jpeg" alt="">
-            <!-- <a class="section-link" href="/bloodline">View Bloodline</a> -->
         </div>
         <p class="section-text">
             Our bloodline is carefully cultivated and nurtured to develop
@@ -43,7 +42,7 @@
 </div>
 <div class="home-section" id="breeder-section">
     <div class="header-container">
-        <p class="section-header">The Breeder</p>
+        <p class="section-header">- The Breeder -</p>
     </div>
     <div class="content-container">
         <img class="section-image-large" src="/web/images/mina.jpeg" alt="">
@@ -55,13 +54,16 @@
 </div>
 <div class="home-section" id="contact-section">
     <div class="header-container">
-        <p class="section-header">Contact</p>
+        <p class="section-header">- Contact -</p>
     </div>
     <div class="content-container">
         <img class="section-image-large" src="/web/images/cat_calling.png" alt="">
         <p class="section-text">
             Send us any questions you have about anything.
         </p>
+        <div class="image-button-container">
+            <a class="section-link light" href="/contact">Contact Us</a>
+        </div>
     </div>
 </div>
 {{ end }}
