--- a/web/css/kittens.css
+++ b/web/css/kittens.css
@@ -4,6 +4,7 @@
 #kittens-main-container {
     background-color: white;
     margin-top: 10vh;
+    padding-bottom: 10vh;
     height: 90vh;
     width: 100vw;
     font-family: "Cinzel Decorative", serif;;
@@ -15,12 +16,13 @@
 
 .kitten-card {
     border-radius: 8px;
-    width: 26rem;
-    margin: 4.5rem;
+    margin-top: 2rem;
+    margin-left: 10vw;
+    margin-right: 10vw;
     display: flex;
     flex-direction: column;
     align-items: center;
-    box-shadow: 0px 0px 15px 15px rgba(0, 0, 0, 0.05);
+    box-shadow: 0px 0px 15px 5px rgba(0, 0, 0, 0.1);
 }
 
 .kitten-card-image {
@@ -28,6 +30,7 @@
     width: 100%;
     cursor: pointer;
     opacity: 0.85;
+    border: 0.75px solid white;
 }
 
 .kitten-card-image:hover {
@@ -67,7 +70,7 @@
     border-radius: 5px;
     cursor: pointer;
     margin-top: 1rem;
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
 }
 
 .kitten-link:hover {
@@ -97,15 +100,9 @@
    Small desktops (≥992px)
 ============================ */
 @media (min-width: 992px) {
-    #kittens-main-container {
-        height: 90vh;
-        margin-top: 10vh;
-    }
-
     .kitten-card {
-        width: 350px;
-        margin: 5rem;
-
+        width: 25vw;
+        margin-bottom: 3rem;
     }
 
     .kitten-card-name {
@@ -124,7 +121,7 @@
         padding-bottom: 8px;
         border-radius: 5px;
         margin-top: 1rem;
-        margin-bottom: 2rem;
+        margin-bottom: 1rem;
     }
 }
 
