--- a/web/css/kittens.css
+++ b/web/css/kittens.css
@@ -4,7 +4,6 @@
 #kittens-main-container {
     background-color: white;
     margin-top: 10vh;
-    padding-bottom: 20vh;
     height: 90vh;
     width: 100vw;
     font-family: "Cinzel Decorative", serif;;
@@ -12,6 +11,10 @@
     flex-wrap: wrap;
     justify-content: center;
     overflow-y: scroll;
+}
+
+#kittens-main-container .kitten-card:last-child {
+    margin-bottom: 5vh;
 }
 
 .kitten-card {
