updated JS and styling

--- a/web/css/kittens.css
+++ b/web/css/kittens.css
@@ -4,17 +4,14 @@
 #kittens-main-container {
     background-color: white;
     margin-top: 10vh;
-    height: 90vh;
+    min-height: 90vh;
+    padding-bottom: 5vh;
     width: 100vw;
     font-family: "Cinzel Decorative", serif;;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    overflow-y: scroll;
-}
-
-#kittens-main-container .kitten-card:last-child {
-    padding-bottom: 5vh;
+    overflow-y: auto;
 }
 
 .kitten-card {
@@ -103,9 +100,21 @@
    Small desktops (≥992px)
 ============================ */
 @media (min-width: 992px) {
+    #kittens-main-container {
+        background-color: white;
+        margin-top: 10vh;
+        min-height: 90vh;
+        padding-bottom: 5vh;
+        width: 100vw;
+        font-family: "Cinzel Decorative", serif;;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        overflow-y: auto;
+    }
+
     .kitten-card {
         width: 25vw;
-        margin-bottom: 3rem;
     }
 
     .kitten-card-name {
