changed the names of the pics and added a favicon

--- a/web/templates/partials/kitten-card.html
+++ b/web/templates/partials/kitten-card.html
@@ -1,6 +1,6 @@
 {{ define "kitten-card" }}
 <div class="kitten-card">
-    <img class="kitten-card-image" src="/web/images/{{ .CatReferenceName }}/pic1.jpeg" alt="">
+    <img class="kitten-card-image" src="/web/images/{{ .CatReferenceName }}/card.jpeg" alt="">
     <div class="kitten-card-sub-div">
         <h3 class="kitten-card-name">{{ .CatTitleName }}</h3>
         <p>.</p>
