--- a/web/templates/layout.html
+++ b/web/templates/layout.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Primal Bloodline</title>
+    <link rel="icon" type="image/png" href="/web/images/icons/favicon.png">
     <link rel="stylesheet" href="/web/css/index.css">
     <link rel="stylesheet" href="/web/css/kittens.css">
     <link rel="stylesheet" href="/web/css/cat-details.css">
