fixed missing mina photo

--- a/web/templates/pages/index.html
+++ b/web/templates/pages/index.html
@@ -45,7 +45,7 @@
         <p class="section-header">- The Breeder -</p>
     </div>
     <div class="content-container">
-        <img class="section-image-large" src="/web/images/mina.jpeg" alt="">
+        <img class="section-image-large" src="/web/images/mina/main.jpeg" alt="">
         <p class="section-text">
             Adia has decades of animal experience and pours everything she has
             into ensuring her animals are nutured and healthy.
