fixed broken images

--- a/web/templates/partials/kitten-detail.html
+++ b/web/templates/partials/kitten-detail.html
@@ -2,7 +2,7 @@
 {{ $first := index .Cats 0 }}
 <div class="cat-details-container">
     <div class="cat-details-image-container">
-        <img class="cat-details-image" src="/web/images/{{ $first.CatReferenceName }}/pic1.jpeg" alt=" a cat photo">
+        <img class="cat-details-image" src="/web/images/{{ $first.CatReferenceName }}/card.jpeg" alt=" a cat photo">
     </div>
     <div class="cat-details-text">
         <p class="cat-name">{{ $first.CatTitleName }}</p>
