--- a/web/templates/partials/navbar.html
+++ b/web/templates/partials/navbar.html
@@ -53,7 +53,9 @@
                     d="m 327.28515,182.91467 v -2.88 c 3.69,0.23 6.04,-2.06 6.6,-5.63 1.15,-7.37 -0.96,-16.34 0.62,-23.84 -0.89,-16.72 0.98,-35.28 -0.51,-51.809999 -0.36,-3.98 -1.75,-6.96 -6.21,-6.98 l -0.02,-2.38 c 8.98,-0.4 17.87,-0.41 26.87,0 l -0.02,2.38 c -3.47,0.08 -6.13,2.49 -6.21,6.02 l -0.03,75.779999 c 0.11,1.27 0.68,3.85 1.44,4.8 1.77,2.19 6.25,0.41 5.3,4.54 z"
                     id="path15" />
             </svg>
+            <p class="slogan">Born primal. Raised with intention. Treasured for life.</p>
         </a>
+        
     </div>
     <div class="burger-menu">
         <div class="burger-line"></div>
