removed unused font files

--- a/web/css/index.css
+++ b/web/css/index.css
@@ -128,7 +128,7 @@ a, a:hover, a:focus, a:active {
 
 /* @font-face {
     font-family: 'PBLFont';
-    src: url('/web/fonts/Primal_Bloodline_v3.ttf') format('truetype');
+    src: url('/web/fonts/Primal_Bloodline.otf') format('opentype');
     font-weight: normal;
     font-style: normal;
 } */
