--- a/web/templates/layout.html
+++ b/web/templates/layout.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="SEkQ57fZxSZJDSjPYpcgjBOU5ApG3exDeOdPmcC4sBY">
     <title>Primal Bloodline</title>
     <link rel="icon" type="image/png" href="/web/images/icons/favicon.png">
     <link rel="stylesheet" href="/web/css/index.css">
